--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,55 @@
 body, .container{
+  font-family: 'Barlow', sans-serif;
+  background-color: #FFE55F;
+  color: #4E4E4E;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.weather-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  width: 400px;
+  height: 600px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+}
+
+.city-country {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.city-country h3 {
+  margin: 0;
+}
+
+.temp-icon-desc {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.temp-icon {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.temperature {
+  font-size: 72px;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
