--- a/src/style.css
+++ b/src/style.css
@@ -76,3 +76,21 @@ body {
   align-items: center;
 }
 
+.extra-info {
+  display: flex;
+  height: 20%;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.humidity,
+.wind {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.extra-info img {
+  width: 15%;
+}
