--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 body {
-  font-family: 'Barlow', sans-serif;
-  color: #4E4E4E;
-  background: linear-gradient(-45deg, #4eebfc, #35daff, #23bad5);
-  background-size: 100vw 100vh;
+  font-family: 'Lato', sans-serif;
+  color: #ffffff;
+  background-image: url(./images/sunny.jpg);
+  background-size: 100vw 100vh ;
 }
 
 .container{
@@ -39,81 +39,57 @@ span.icon {
 }
 
 .weather-info {
+  width: 70%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  background-color: rgb(255, 255, 255);
-  width: 400px;
-  height: 600px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 .city-country {
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-}
-
-.city-country h3 {
-  margin: 0;
-}
-
-.temp-icon-desc {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  margin-top: 50px;
-}
-
-.temp-icon {
-  display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+}
+.city {
+  font-size: 25px;
+}
+.country {
+  margin-top: 10px;
+  font-size: 20px;
 }
 
-.temp-icon img {
-  width: 25%;
+.temperature-info {
+  text-align: center;
+  margin-top: 70px;
 }
 
 .temperature {
-  font-size: 60px;
+  font-size: 70px;
 }
 
-.weather {
+.squares-info {
+  margin-top: 100px;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  margin-top: 10%;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.weather img {
-  width: 20%;
-}
-
-.description {
+.square {
+  width: 200px;
+  height: 200px;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgb(0 0 0 / 15%);
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+  color: #4E4E4E;
 }
-
-.extra-info {
-  display: flex;
-  height: 20%;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.humidity,
-.wind {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.extra-info img {
-  width: 15%;
+.square img{
+  width: 50%;
 }
