input change placeholder

--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   color: #ffffff;
-  background-image: url(./images/sunny.jpg);
+  background-image: url(./images/background/clear-night.jpg);
   background-size: 100vw 100vh ;
 }
 
