--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,9 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   color: #ffffff;
-  background-image: url(./images/background/clear-night.jpg);
-  background-size: 100vw 100vh ;
+  background-image: url(./images/background/fog.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .container{
@@ -15,6 +16,7 @@ body {
 }
 
 .search {
+  height: 20vh;
   margin-top: 20px;
   margin-bottom: 60px;
   display: flex;
@@ -42,7 +44,7 @@ span.icon {
 
 .weather-info {
   width: 70%;
-  height: 100%;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -93,6 +95,7 @@ span.icon {
   justify-content: space-around;
   align-items: center;
   color: #4E4E4E;
+  margin: 20px;
 }
 .square img{
   width: 50%;
