--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   color: #ffffff;
-  background-image: url(./images/background/fog.jpg);
+  background-image: url(./images/background/sunny.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
