--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,8 @@ body {
 }
 
 .input-search {
-  width:400px;
+  background-color: rgb(255, 255, 255);
+  width: 400px;
   height: 40px;
   border-radius: 10px;
   text-indent: 35px;
