--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
+  background-image: url('./images/background/01n-back.jpg');
   color: #ffffff;
   background-size: cover;
   background-attachment: fixed;
